CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(EigenAnalysis)

# find and include Eigen
SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../cmake)

IF (ParaView_SOURCE_DIR)
  INCLUDE_DIRECTORIES(
    ${VTK_INCLUDE_DIRS}
  )  
ELSE (ParaView_SOURCE_DIR)
  FIND_PACKAGE(ParaView REQUIRED)
  INCLUDE(${PARAVIEW_USE_FILE})
ENDIF (ParaView_SOURCE_DIR)

ADD_PARAVIEW_PLUGIN(EigenAnalysis "1.0"
  SERVER_MANAGER_XML EigenAnalysis.xml
  SERVER_MANAGER_SOURCES vtkEigenAnalysis.cxx
)
