cmake_minimum_required(VERSION 2.8)
 
PROJECT(LAMMPSReader)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

add_library( LAMMPSReader 
  LAMMPSReader.h
  LAMMPSReader.cxx 
)

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} 
  vtkCommonCore
  vtkCommonDataModel  
)

INSTALL( FILES LAMMPSReader.h
        DESTINATION include
)
  
INSTALL( TARGETS ${PROJECT_NAME} 
  CONFIGURATIONS Release 
  RUNTIME DESTINATION lib/Release 
  LIBRARY DESTINATION lib/Release
  ARCHIVE DESTINATION lib/Release
)

INSTALL( TARGETS ${PROJECT_NAME} 
  CONFIGURATIONS Debug 
  RUNTIME DESTINATION lib/Debug 
  LIBRARY DESTINATION lib/Debug
  ARCHIVE DESTINATION lib/Debug
)

INSTALL( TARGETS ${PROJECT_NAME} CONFIGURATIONS RelWithDebInfo RUNTIME DESTINATION bin/RelWithDebInfo LIBRARY DESTINATION bin/RelWithDebInfo )